@@ -24,6 +24,8 @@ javafx {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:20.1.0'
+
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
 
@@ -33,11 +35,13 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
     implementation 'mysql:mysql-connector-java:8.0.28'
     implementation 'javax.persistence:javax.persistence-api:2.2'
+    implementation 'org.controlsfx:controlsfx:11.1.1'
 }
 
 application {
     // Define the main class for the application.
     mainClass = 'ScheduleGnome.JavaFXApp'
+    applicationDefaultJvmArgs = ["--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"]
 }
 
 jar {
